[package]
name = "qltree"
version = "0.1.0"
edition = "2021"
description = "ACID-compliant B-tree Database"
repository = "https://github.com/qlgl/qltree"
license = "MIT"
keywords = ["btree", "database"]
categories = ["database-implementations"]
rust-version = "1.68.1"
# readme = "../README.md"

[features]
default = ["sync"]
sync = []

[dependencies]
thiserror = "1.0.30"
byteorder = "1.4.3"
flume = "0.10.10"
crc = "3.0.0"
once_cell = "1.9.0"
lru = "0.7.0"
parking_lot = "0.12.0"
tracing = { version = "0.1.30", optional = true }
num_cpus = "1.13.1"
backtrace = "0.3.64"
arc-bytes = "0.3.5"
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = "0.6.9"
log = "*"

[dev-dependencies]
nanorand = "0.7.0"
anyhow = "1.0.53"
tempfile = "3.3.0"
